# wellbeing_agent

./: DEPLOYMENT.md  README.md  README_HF.md  app.py  pyproject.toml  requirements.txt  run_ui.bat  run_ui.sh
src/wellbeing_agent/: app.py  crew.py  main.py
src/wellbeing_agent/config/: agents.yaml  tasks.yaml
