[project]
name = "wellbeing_agent"
version = "0.1.0"
description = "wellbeing_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.2.1",
    "gradio>=4.0.0",
]

[project.scripts]
wellbeing_agent = "wellbeing_agent.main:run"
run_crew = "wellbeing_agent.main:run"
run_ui = "wellbeing_agent.app:main"
train = "wellbeing_agent.main:train"
replay = "wellbeing_agent.main:replay"
test = "wellbeing_agent.main:test"
run_with_trigger = "wellbeing_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
